<resources>
    <string name="app_name">SimpleNews</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_news">新闻</string>
    <string name="navigation_images">图片</string>
    <string name="navigation_weather">天气</string>
    <string name="navigation_setting">设置</string>
    <string name="navigation_about">关于</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="name">Lauren_Liuling</string>
    <string name="app_description">本APP用来演示Material Design以及MVP设计模式在项目中的使用</string>
    <string name="app_github_url">APP地址：https://github.com/robotlife/SimpleNews</string>
    <string name="test_permissiongen_function">测试Anroid6.0权限</string>
    <string name="phone_number">10086</string>
    <string name="author">作者：robotlife</string>
    <string name="email">邮箱：940350851@qq.com</string>
    <string name="blog">博客：http://blog.csdn.net/zhuhai__yizhi</string>

    <string name="top">头条</string>
    <string name="nba">NBA</string>
    <string name="cars">汽车</string>
    <string name="jokes">笑话</string>

    <string name="jingxuan">精选</string>
    <string name="qutu">趣图</string>
    <string name="meitu">美图</string>
    <string name="story">故事</string>

    <string name="load_fail">加载数据失败!</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>

    <string name="image_hit">一次只加载20条，查看更多内容请刷新哦。</string>
    <string name="share_qq">分享到QQ</string>
    <string name="share_sina">分享到微博</string>
    <string name="share_wechat">分享到微信</string>
    <string name="share_sms">分享到短信</string>
    <string name="night_mode">夜间模式</string>
    <string name="permission_deny_call_msg">您拒绝了打电话的权限，需要重新赋予权限！</string>
    <string name="permission_deny_access_location">您拒绝了获取定位信息的权限，需要重新赋予权限！</string>
    <string name="get_location_failed">定位失败</string>
</resources>
