<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/setting_text_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/app_name"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/setting_text_color"
                android:textSize="13sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <!--CardView直接设置的padding值没有作用-->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/setting_text_bg"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/app_github_url"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/author"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="email"
                android:text="@string/email"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:autoLink="web"
                android:text="@string/blog"
                android:textColor="@color/setting_text_dark_color"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>